--- a/src/partials/faqs/tabs.html
+++ b/src/partials/faqs/tabs.html
@@ -37,45 +37,25 @@
             </a>
           </li>
           <li class="w-full">
-            <a
-              href="#documentos"
-              data-tab="2"
-              aria-current="page"
-              class="tabs_link"
-            >
+            <a href="#faqs" data-tab="2" aria-current="page" class="tabs_link">
               <i class="fa-sharp fa-light fa-file-invoice"></i>
               <b>Certificados y documentos</b>
             </a>
           </li>
           <li class="w-full">
-            <a
-              href="#documentos"
-              data-tab="3"
-              aria-current="page"
-              class="tabs_link"
-            >
+            <a href="#faqs" data-tab="3" aria-current="page" class="tabs_link">
               <i class="fa-solid fa-money-check"></i>
               <b>Mesada pensional</b>
             </a>
           </li>
           <li class="w-full">
-            <a
-              href="#documentos"
-              data-tab="4"
-              aria-current="page"
-              class="tabs_link"
-            >
+            <a href="#faqs" data-tab="4" aria-current="page" class="tabs_link">
               <i class="fa-solid fa-house-medical"></i>
               <b>EPS y cajas de compensación</b>
             </a>
           </li>
           <li class="w-full">
-            <a
-              href="#documentos"
-              data-tab="5"
-              aria-current="page"
-              class="tabs_link"
-            >
+            <a href="#faqs" data-tab="5" aria-current="page" class="tabs_link">
               <i class="fa-solid fa-dollar-sign"></i>
               <b>Sobre temas financieros</b>
             </a>
