--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -144,8 +144,8 @@
           class="as__nav_links_ppal_link"
           aria-current="page"
           title="SOLICITUDES"
-          href="/"
-          >SOLICITUDES O PETICIONES</a
+          href="/solicitudes"
+          >SOLICITUDES</a
         >
       </li>
       <li class="as__nav_links_ppal_li">
