--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -62,9 +62,17 @@
       type="font/woff"
     />
     <block name="head"> </block>
-    <link rel="icon" href="favicon.ico" />
-    <link href="/assets/css/app.css" rel="stylesheet" />
 
+    <!-- FAVICON -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      value="/assets/images/asu-favicon-alt.png"
+    />
+    <!-- STYLES -->
+    <link href="/assets/css/app.css" rel="stylesheet" />
+    <!-- SCRIPS -->
     <script
       src="https://kit.fontawesome.com/c43a2a9e8d.js"
       crossorigin="anonymous"
