--- a/src/partials/solicitudes/tabs.html
+++ b/src/partials/solicitudes/tabs.html
@@ -1,114 +1,49 @@
-<section id="documentos" class="as__section as__g_documentos_tabs">
+<section class="as__section as__g_documentos_tabs">
   <div class="as__section_wrapper full">
     <div class="as__section_content_full as__g_documentos_tabs_int">
       <h2>¿Qué tipo de solicitud puedes realizar?</h2>
 
-      <div class="as__doc_tabs_small">
-        <label for="tabs">Selecciona el tema</label>
-        <select id="docs_tabs">
-          <option value="0">
-            Aportes pensión voluntaria (cambios o cancelación)
-          </option>
-          <option value="1">Caja de compensación</option>
-          <option value="2">Certificado de estudio</option>
-          <option value="3">Certificado de supervivencia</option>
-          <option value="4">Datos bancarios</option>
-          <option value="5">
-            Entidad Administradora de Fondos de Pensión (AFP)
-          </option>
-          <option value="6">Entidad Promotora de Salud (EPS)</option>
-          <option value="7">Redistribución de mesada</option>
-        </select>
-      </div>
-      <ul class="as__doc_tabs">
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="0"
-            aria-current="page"
-            class="tabs_link active"
-          >
-            <i class="fa-solid fa-money-from-bracket"></i>
-            <b>Aportes pensión voluntaria</b>
-            <small> (cambios o cancelación)</small>
-          </a>
+      <ul class="as__doc_tabs_info">
+        <li>
+          <div class="tabs_link tab_info">
+            <i class="fa-solid fa-clipboard"></i>
+            <b>Petición </b>
+            <p>
+              Es una solicitud mediante la cual se requiere información
+              adicional y complementaria sobre nuestra oferta de servicios.
+            </p>
+          </div>
         </li>
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="1"
-            aria-current="page"
-            class="tabs_link"
-          >
-            <i class="fa-solid fa-star-of-life"></i>
-            <b>Caja de compensación</b>
-          </a>
+        <li>
+          <div class="tabs_link tab_info">
+            <i class="fa-solid fa-face-disappointed"></i>
+            <b>Queja </b>
+            <p>
+              Manifestación de inconformidad sobre la atención en cualquier
+              canal.
+            </p>
+          </div>
         </li>
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="2"
-            aria-current="page"
-            class="tabs_link"
-          >
-            <i class="fa-solid fa-graduation-cap"></i>
-            <b>Certificado de escolaridad</b>
-          </a>
+        <li>
+          <div class="tabs_link tab_info">
+            <i class="fa-solid fa-circle-info"></i>
+            <b>Reclamo </b>
+            <p>
+              Es la manifestación de inconformidad respecto a un producto o
+              servicio adquirido, ofrecido o prestado por una entidad vigilada.
+            </p>
+          </div>
         </li>
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="3"
-            aria-current="page"
-            class="tabs_link"
-          >
-            <i class="fa-solid fa-heart"></i>
-            <b>Certificado de supervivencia</b>
-          </a>
-        </li>
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="4"
-            aria-current="page"
-            class="tabs_link"
-          >
-            <i class="fa-solid fa-memo-circle-info"></i>
-            <b>Datos bancarios</b>
-          </a>
-        </li>
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="5"
-            aria-current="page"
-            class="tabs_link"
-          >
-            <i class="fa-solid fa-building-columns"></i>
-            <b>Entidad Administradora de Fondos de Pensión (AFP)</b>
-          </a>
-        </li>
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="6"
-            aria-current="page"
-            class="tabs_link"
-          >
-            <i class="fa-solid fa-heart-pulse"></i>
-            <b>Entidad Promotora de Salud (EPS)</b>
-          </a>
-        </li>
-        <li class="w-full">
-          <a
-            href="#documentos"
-            data-tab="7"
-            aria-current="page"
-            class="tabs_link"
-          >
-            <i class="fa-solid fa-money-bill-trend-up"></i>
-            <b>Redistribución de mesada</b>
-          </a>
+        <li>
+          <div class="tabs_link tab_info">
+            <i class="fa-solid fa-notes"></i>
+            <b>Servicio </b>
+            <p>
+              Es la entrega de la oferta de valor a través de los canales de
+              atención, la cual puede ser: transaccional, asesoría o
+              informativa.
+            </p>
+          </div>
         </li>
       </ul>
     </div>
