--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -302,3 +302,19 @@
     </div>
   </div>
 </footer>
+
+<div id="open_chat" class="as__help toopen">
+  <ul class="as__help_icons">
+    <li>
+      <a href="#" class="as__help_icons_wap"> <span> Whatsapp </span> </a>
+    </li>
+    <li>
+      <a href="#" class="as__help_icons_chat"> <span> Chat </span> </a>
+    </li>
+  </ul>
+  <button id="open_chat_btn" class="as__help_launch">
+    <div class="as__help_launch_icon">
+      <span class="sr-only"> Chat </span>
+    </div>
+  </button>
+</div>
