--- a/src/partials/solicitudes/sol_form.html
+++ b/src/partials/solicitudes/sol_form.html
@@ -11,7 +11,7 @@
           <h5>¿Tienes dudas sobre cómo gestionar tus documentos?</h5>
           <p>Nosotros te explicamos lo que necesitas saber</p>
           <a
-            href="/solicitudes_caso"
+            href="/gestion_documentos"
             title="¿Quieres conocer el estado de tu
             caso?"
             class="as__button small"
