--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -87,7 +87,9 @@
               <a href="/pension_invalidez" aria-current="page"> Invalidez </a>
             </li>
             <li>
-              <a href="#" aria-current="page"> Solicitudes o peticiones </a>
+              <a href="/solicitudes" aria-current="page">
+                Solicitudes o peticiones
+              </a>
             </li>
             <li>
               <a href="/preguntas_frecuentes" aria-current="page">
@@ -144,7 +146,7 @@
     <div class="as__footer_menu_sec">
       <ul>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a href="/terminos" class="dest" aria-current="page">
             Términos y condiciones
           </a>
         </li>
@@ -185,23 +187,23 @@
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a href="/consumidor_financiero" class="dest" aria-current="page">
             Consumidor financiero
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a href="/preguntas_frecuentes" class="dest" aria-current="page">
             Preguntas frecuentes
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a href="/solicitudes" class="dest" aria-current="page">
             Solicitudes y peticiones
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
-            Gestiona de documentos
+          <a href="/gestion_documentos" class="dest" aria-current="page">
+            Gestión de documentos
           </a>
         </li>
         <li>
