--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1729,3 +1729,27 @@ body {
     @apply bg-chat_open;
   }
 }
+.as__terms {
+  @apply flex flex-col gap-y-8;
+  .as__terms_info {
+    @apply flex flex-col gap-y-4;
+    h1 {
+      @apply text-azul-bold text-3xl font-bold font-je;
+    }
+    h2 {
+      @apply text-azul-bold text-2xl font-bold font-je;
+    }
+    a{
+      @apply font-bold text-azul-bold underline underline-offset-4;
+    }
+    div {
+      @apply flex flex-col gap-y-4 text-azul-dark;
+      ul{
+        @apply flex flex-col gap-y-2 ml-8;
+        li{
+          @apply list-disc;
+        }
+      }
+    }
+  }
+}
