links en el footers, meta tags, documentos pdf

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -65,28 +65,38 @@
                 Nuestra empresa
               </a>
             </li>
+
             <li>
               <a href="#" aria-current="page"> Gobierno corporativo </a>
             </li>
-            <li>
-              <a href="/renta_vitalicia" aria-current="page">
-                Renta Vitalicia
-              </a>
-            </li>
-            <li>
-              <a href="/seguro_previsional" aria-current="page">
-                Seguro previsional
-              </a>
-            </li>
+
             <li>
               <a href="/pension_sobreviviencia" aria-current="page">
                 Sobrevivencia
               </a>
             </li>
+
             <li>
               <a href="/pension_invalidez" aria-current="page"> Invalidez </a>
             </li>
+
             <li>
+              <a href="/renta_vitalicia" aria-current="page">
+                Renta Vitalicia
+              </a>
+            </li>
+
+            <li>
+              <a href="/seguro_previsional" aria-current="page">
+                Seguro previsional
+              </a>
+            </li>
+
+            <!-- <li>
+              <a href="#" aria-current="page"> En los medios </a>
+            </li> -->
+
+            <!-- <li>
               <a href="/solicitudes" aria-current="page">
                 Solicitudes o peticiones
               </a>
@@ -98,7 +108,7 @@
             </li>
             <li>
               <a href="#" class="dest" aria-current="page"> De interés </a>
-            </li>
+            </li> -->
           </ul>
         </nav>
         <div class="as_footer_ct as_footer_ct_inf">
@@ -151,38 +161,82 @@
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a
+            href="/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
             Política Riesgo LAFT
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a
+            href="/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
             Políticas de Tratamiento de datos personales
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page"> Estatutos sociales </a>
+          <a
+            href="/documentos/Estatutos-sociales-Asulado.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
+            Estatutos sociales
+          </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a
+            href="/documentos/Codigo-de-buen-gobierno-Asulado.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
             Código de buen gobierno
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a
+            href="/documentos/Codigo-de-etica-y-conducta-Asulado.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
             Código de ética y conducta
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a
+            href="/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
             Gestión del riesgo de fraude, soborno y corrupción
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page"> Línea ética </a>
+          <a
+            href="https://suraam.sistemaetico.com/"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
+            Línea ética
+          </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a
+            href="https://www.superfinanciera.gov.co/jsp/"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
             Superintendencia financiera
           </a>
         </li>
@@ -207,7 +261,12 @@
           </a>
         </li>
         <li>
-          <a href="#" class="dest" aria-current="page">
+          <a
+            href="/documentos/Tips-de-ciberseguridad-Asulado.pdf"
+            target="_blank"
+            class="dest"
+            aria-current="page"
+          >
             Tips de ciberseguridad
           </a>
         </li>
