--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -157,7 +157,7 @@
           >PREGUNTAS</a
         >
       </li>
-      <li class="as__nav_links_ppal_li">
+      <!-- <li class="as__nav_links_ppal_li">
         <button
           class="as__nav_links_ppal_link dest"
           aria-current="page"
@@ -165,7 +165,7 @@
         >
           DE INTERÉS
         </button>
-      </li>
+      </li> -->
       <li class="usability as__nav_links_ppal_li">
         <a
           class="as__nav_links_ppal_link"
