--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -89,7 +89,14 @@
       <img src="/assets/images/vigilado_vert.png" alt="Vigilado" />
     </div>
     <include src="footer.html"></include>
+    <script
+      type="text/javascript"
+      src="https://service.force.com/embeddedservice/5.0/esw.min.js"
+    ></script>
+
     <script src="/assets/js/app.js"></script>
+    <!-- CHAT  -->
+
     <!-- Accessibility Code for "cunning-goat-k2f2ym-dev-ed--c.trailblaze.vf.force.com" -->
     <script>
       window.interdeal = {
