--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -346,13 +346,31 @@
         </svg>
       </div>
       <div class="as__footer_social">
-        <a href="#" class="dest" aria-current="page" title="Instagram">
+        <a
+          href="https://www.instagram.com/asuladoseguros/"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+          title="Instagram"
+        >
           <i role="presentation" class="fa-brands fa-instagram"></i>
         </a>
-        <a href="#" class="dest" aria-current="page" title="Facebook">
+        <a
+          href="https://www.facebook.com/Asuladosegurosdevida/"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+          title="Facebook"
+        >
           <i role="presentation" class="fa-brands fa-facebook-f"></i>
         </a>
-        <a href="#" class="dest" aria-current="page" title="Youtube">
+        <a
+          href="https://www.youtube.com/channel/UC9fAsL1UH4xqJh4S66pe8ow"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+          title="Youtube"
+        >
           <i role="presentation" class="fa-brands fa-youtube"></i>
         </a>
       </div>
@@ -367,10 +385,18 @@
 <div id="open_chat" class="as__help toopen">
   <ul class="as__help_icons">
     <li>
-      <a href="#" class="as__help_icons_wap"> <span> Whatsapp </span> </a>
+      <a
+        href="https://api.whatsapp.com/send?phone=573155114150"
+        target="_blank"
+        class="as__help_icons_wap"
+      >
+        <span> Whatsapp </span>
+      </a>
     </li>
     <li>
-      <a href="#" class="as__help_icons_chat"> <span> Chat </span> </a>
+      <button id="start_chat" class="as__help_icons_chat">
+        <span> Chat </span>
+      </button>
     </li>
   </ul>
   <button id="open_chat_btn" class="as__help_launch">
