--- a/src/partials/seguro_previsional/que_es.html
+++ b/src/partials/seguro_previsional/que_es.html
@@ -1227,19 +1227,24 @@
           <p class="prop_anim">
             <b>Conoce las condiciones generales del producto</b>
           </p>
+
+          <a
+            href="/documentos/Condiciones-Generales-Seguro-Previsional.pdf"
+            target="_blank"
+            class="as__button prop_anim"
+          >
+            <span>INGRESA AQUÍ</span>
+            <i role="presentation" class="fa-light fa-arrow-right"></i>
+          </a>
           <p class="prop_anim">
             *Consulta la
             <a
-              href="#"
+              href="https://fasecolda.com/ramos/seguridad-social/normatividad/"
               target="_blank"
               title="Normatividad aplicable al producto"
               >Normatividad aplicable al producto</a
             >
           </p>
-          <a href="/" class="as__button prop_anim">
-            <span>INGRESA AQUÍ</span>
-            <i role="presentation" class="fa-light fa-arrow-right"></i>
-          </a>
         </div>
       </div>
     </div>
