--- a/src/partials/faqs/faq_3.html
+++ b/src/partials/faqs/faq_3.html
@@ -69,9 +69,18 @@
         <div class="fqs_info">
           <p>
             Conoce la documentación requerida para la sustitución pensional
-            según sea tu caso, <a href="#" target="_blank">ingresando aquí</a>.
-            Adicional, recuerda diligenciar la solicitud de sustitución
-            pensional <a href="#" target="_blank">descarga aquí</a>.
+            según sea tu caso,
+            <a
+              href="/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf"
+              target="_blank"
+              >ingresando aquí</a
+            >. Adicional, recuerda diligenciar la solicitud de sustitución
+            pensional
+            <a
+              href="/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf"
+              target="_blank"
+              >descarga aquí</a
+            >.
           </p>
           <ul>
             <li>
