--- a/src/partials/ayuda.html
+++ b/src/partials/ayuda.html
@@ -226,7 +226,7 @@
       </div>
     </div>
     <div class="as__ayuda_link prop_anim">
-      <a href="/" class="as__button">
+      <a href="/preguntas_frecuentes" class="as__button">
         <span>INGRESAR</span>
         <i role="presentation" class="fa-light fa-arrow-right"></i>
       </a>
