--- a/src/partials/home/documentos.html
+++ b/src/partials/home/documentos.html
@@ -14,7 +14,7 @@
               ¿Sabes cómo gestionar tus colillas, certificados, cajas de
               compensación y otros documentos? Te enseñamos a hacerlo.
             </p>
-            <a href="/" class="as__button">
+            <a href="/gestion_documentos" class="as__button">
               <span>SABER MÁS</span>
               <i role="presentation" class="fa-light fa-arrow-right"></i>
             </a>
