--- a/src/partials/home/servicios.html
+++ b/src/partials/home/servicios.html
@@ -40,7 +40,7 @@
               afiliado.
             </p>
           </div>
-          <a href="/" class="as__button">
+          <a href="/seguro_previsional" class="as__button">
             <span>MÁS INFORMACIÓN</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
