--- a/src/partials/renta_sobrevivencia/destacados.html
+++ b/src/partials/renta_sobrevivencia/destacados.html
@@ -13,14 +13,11 @@
             <h2><span>Renta Vitalicia</span> <b>por sobrevivencia</b></h2>
             <p>
               Si recibes una mesada pensional por el fallecimiento de un ser
-              querido,
-              <a href="/" title="Más Información">
-                ingresa aquí para más información.</a
-              >
+              querido.
             </p>
           </div>
-          <a href="/" class="as__button">
-            <span>MÁS INFORMACIÓN</span>
+          <a href="/pension_sobreviviencia" class="as__button">
+            <span>INGRESA AQUÍ PARA MÁS INFORMACIÓN</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
         </div>
@@ -36,14 +33,11 @@
             <h2><span>Renta Vitalicia</span> <b>por invalidez</b></h2>
             <p>
               Si recibes una mesada pensional debido a una condición de
-              invalidez,
-              <a href="/" title="Más Información">
-                ingresa aquí para más información.</a
-              >
+              invalidez.
             </p>
           </div>
-          <a href="/" class="as__button">
-            <span>MÁS INFORMACIÓN</span>
+          <a href="/pension_invalidez" class="as__button">
+            <span>INGRESA AQUÍ PARA MÁS INFORMACIÓN</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
         </div>
