--- a/src/partials/rv_invalidez/gestion.html
+++ b/src/partials/rv_invalidez/gestion.html
@@ -21,7 +21,7 @@
             Ingresa a nuestra sección de solicitudes o peticiones y te
             ayudaremos a obtenerlos en pocos clics.
           </p>
-          <a href="/" class="as__button prop_anim">
+          <a href="/solicitudes" class="as__button prop_anim">
             <span>MÁS INFORMACIÓN</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
