--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -270,6 +270,11 @@
             Tips de ciberseguridad
           </a>
         </li>
+        <li>
+          <a href="/suscribete" class="dest" aria-current="page">
+            Manejar mi suscripción
+          </a>
+        </li>
       </ul>
     </div>
     <div class="as__footer_brands">
