--- a/src/partials/rv_sobrevivencia/gestion.html
+++ b/src/partials/rv_sobrevivencia/gestion.html
@@ -1,28 +1,30 @@
 <section id="gestion" class="as__section as__gestion {{bg}}">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      <h3 class="as__title_section">Certificados</h3>
+      <h3 class="as__title_section">Documentos</h3>
       <div class="as__gestion_wrapper">
         <div class="as__gestion_ilustra">
-          <h3 class="small">
+          <h3 class="small nom">
             ¿Cómo obtener tus certificados, la colilla de pago de tu pensión y
             otros documentos?
           </h3>
           <div>
             <img
-              src="/assets/images/img_gestion.webp"
-              alt="¿ Quién lo gestiona ?"
+              src="/assets/images/img_gestion2.webp"
+              alt=" ¿Cómo obtener tus certificados, la colilla de pago de tu pensión y
+              otros documentos?"
+              class="small"
             />
           </div>
         </div>
 
         <div class="as__gestion_content">
           <p>
-            Ingresa a nuestra sección de solicitudes o peticiones y te
-            ayudaremos a obtenerlos en pocos clics.
+            Suscríbete ahora y recibe la información más importante directamente
+            en tu correo electrónico,
           </p>
-          <a href="/solicitudes" class="as__button prop_anim">
-            <span>MÁS INFORMACIÓN</span>
+          <a href="/suscribete" class="as__button prop_anim">
+            <span>SABER MÁS</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
         </div>
