--- a/src/partials/rv_sobrevivencia/gestion.html
+++ b/src/partials/rv_sobrevivencia/gestion.html
@@ -1,7 +1,7 @@
 <section id="gestion" class="as__section as__gestion {{bg}}">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      <h3 class="as__title_section">Documentos</h3>
+      <h3 class="as__title_section">Suscríbete</h3>
       <div class="as__gestion_wrapper">
         <div class="as__gestion_ilustra">
           <h3 class="small nom">
@@ -24,7 +24,7 @@
             en tu correo electrónico,
           </p>
           <a href="/suscribete" class="as__button prop_anim">
-            <span>SABER MÁS</span>
+            <span>SUSCRIBIRME AHORA</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
         </div>
