--- a/src/partials/suscribete/sol_form.html
+++ b/src/partials/suscribete/sol_form.html
@@ -148,7 +148,7 @@
               </div>
             </div>
           </fieldset>
-          <fieldset class="form_info_info nop">
+          <!-- <fieldset class="form_info_info nop">
             <div class="as__form_wrapper">
               <div class="form-control">
                 <h4>¿Por cuál medio deseas recibir tu información?</h4>
@@ -163,6 +163,13 @@
                   />
                   <span class="label-text">Correo electrónico </span>
                 </label>
+              </div>
+            </div>
+          </fieldset> -->
+          <fieldset class="form_info_sol nop">
+            <div class="as__form_wrapper">
+              <div class="form-control">
+                <h4>Recibe la información en tu correo electrónico</h4>
               </div>
             </div>
           </fieldset>
