ajustes en assets footer

--- a/src/partials/solicitudes/tabs.html
+++ b/src/partials/solicitudes/tabs.html
@@ -6,7 +6,7 @@
       <ul class="as__doc_tabs_info">
         <li>
           <div class="tabs_link tab_info">
-            <i class="fa-solid fa-clipboard"></i>
+            <i class="ico_t">P</i>
             <b>Petición </b>
             <p>
               Es una solicitud mediante la cual se requiere información
@@ -16,7 +16,7 @@
         </li>
         <li>
           <div class="tabs_link tab_info">
-            <i class="fa-solid fa-face-disappointed"></i>
+            <i class="ico_t">Q</i>
             <b>Queja </b>
             <p>
               Manifestación de inconformidad sobre la atención en cualquier
@@ -26,7 +26,7 @@
         </li>
         <li>
           <div class="tabs_link tab_info">
-            <i class="fa-solid fa-circle-info"></i>
+            <i class="ico_t">R</i>
             <b>Reclamo </b>
             <p>
               Es la manifestación de inconformidad respecto a un producto o
@@ -36,7 +36,7 @@
         </li>
         <li>
           <div class="tabs_link tab_info">
-            <i class="fa-solid fa-notes"></i>
+            <i class="ico_t">S</i>
             <b>Servicio </b>
             <p>
               Es la entrega de la oferta de valor a través de los canales de
