--- a/src/partials/empresa/como.html
+++ b/src/partials/empresa/como.html
@@ -7,7 +7,7 @@
   <ul id="am__como_car" class="as__como_posts">
     <li class="as__como_item">
       <div class="as__como_item_icon anim">
-        <i class="fa-light fa-circle-info"></i>
+        <i class="fa-light fa-face-smile"></i>
       </div>
       <div class="as__como_item_content anim">
         <p>
@@ -18,7 +18,7 @@
     </li>
     <li class="as__como_item">
       <div class="as__como_item_icon anim">
-        <i class="fa-light fa-microchip"></i>
+        <i class="fa-light fa-laptop"></i>
       </div>
       <div class="as__como_item_content anim">
         <p>
@@ -40,7 +40,7 @@
     </li>
     <li class="as__como_item">
       <div class="as__como_item_icon anim">
-        <i class="fa-light fa-rotate-right"></i>
+        <i class="fa-light fa-gears"></i>
       </div>
       <div class="as__como_item_content anim">
         <p>
@@ -50,7 +50,7 @@
     </li>
     <li class="as__como_item">
       <div class="as__como_item_icon anim">
-        <i class="fa-light fa-stars"></i>
+        <i class="fa-light fa-display-chart-up"></i>
       </div>
       <div class="as__como_item_content anim">
         <p>
