ajuste del menú

--- a/src/partials/empresa/proposito.html
+++ b/src/partials/empresa/proposito.html
@@ -231,7 +231,7 @@
     </svg>
   </div>
 </section>
-<section class="as__section as_proposito_video">
+<!-- <section class="as__section as_proposito_video">
   <div class="as__section_wrapper">
     <div class="as__section_content">
       <div class="as__video_wrapper">
@@ -239,4 +239,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
