--- a/src/css/app.css
+++ b/src/css/app.css
@@ -833,7 +833,7 @@ body {
 }
 /** EMPRESA SOBRE  */
 .as_em_sobre {
-  @apply z-0 overflow-hidden bg-[#08C1FE] pb-28 pt-16;
+  @apply z-0 overflow-hidden bg-BG-4 pb-28 pt-16;
   .as__servicios_wrapper {
     @apply relative mt-10 flex w-full flex-col flex-wrap items-stretch justify-between gap-y-16 md:flex-row md:gap-y-0;
     &:before {
