Ajustes de imagenes, consumidor financiero, solic

--- a/src/partials/faqs/faq_3.html
+++ b/src/partials/faqs/faq_3.html
@@ -1,4 +1,4 @@
-<li data-tab="{{data}}" class="as__g_faqs_tcon_list_int {{cls}}">
+<li data-tab="{{data}}" class=" as__g_faqs_ls as__g_faqs_tcon_list_int {{cls}}">
   <h3>Sobre certificados y documentos</h3>
   <ol class="fqs">
     <li class="fqs_list">
