--- a/src/partials/faqs/faq_6.html
+++ b/src/partials/faqs/faq_6.html
@@ -1,4 +1,4 @@
-<li data-tab="{{data}}" class="as__g_faqs_tcon_list_int {{cls}}">
+<li data-tab="{{data}}" class="as__g_faqs_tcon_list_int as__g_faqs_ls {{cls}}">
   <h3>Trámites entidades financieras</h3>
   <ol class="fqs">
     <li class="fqs_list">
