--- a/src/partials/gestion/tabs_content.html
+++ b/src/partials/gestion/tabs_content.html
@@ -50,9 +50,11 @@
         >
       </li>
       <li>
-        <b class="text-xl font-bold">¡Y ya estás listo!</b> solo debes hacer
-        clic en el botón <b class="bt v_azulb">Enviar</b><br />
-        Gestionáremos tu caso con la mayor brevedad posible.
+        <b class="font-bold">¡Y ya estás listo!</b> solo debes hacer clic en el
+        botón <b class="bt v_azulb">Enviar</b><br />
+        <b class="font-bold text-azul-bold"
+          >Gestionaremos tu caso con la mayor brevedad posible.</b
+        >
       </li>
     </ul>
   </div>
